December 2016 5.6
  - Windows: added support for pager, otherPager, mobile, otherMobile, company and proxyAddresses (disabled by default in server profile)
  - Mail routing: enable for groups and allow to add/remove the extension
  - LAM Pro:
   -> 389ds: new wildcards for custom scripts: $INFO.389lockingStatusChange$ and $INFO.389deactivationStatusChange$
   -> Custom scripts: custom button label supported for manual scripts


10.09.2016 5.5
  - Windows: allow to show effective members of a group
  - Lamdaemon: support SSH key authentication
  - LAM Pro:
   -> Group of names/members + roles: allow to show effective members of a group
   -> Cron jobs:
     * Move or delete expired accounts (Shadow, Windows, qmail, FreeRadius)
     * 389ds: added job to notify before password expires
   -> 389ds: manage password expiration time with module "Account locking"
  - Fixed bugs:
   -> PHP 7 issues on edit page


21.06.2016 5.4
  - Unix: support magic numbers for UIDs/GIDs (e.g. 389 server DNA plugin)
  - Samba 3: support for Samba password history (RFE 133)
  - LAM Pro:
   -> New module for 389ds unlocking and account (de)activation
   -> Self registration: support for Google reCAPTCHA
   -> Password notification jobs support CC and BCC
   -> Self Service: Samba 3 supports password history and minimum age check


21.03.2016 5.3
  - Requires PHP 5.4.0 or higher
  - PHP 7 support
  - Windows: support management of fax number
  - Login can show display name instead of server URL
  - Personal/Unix: support K5KEY hash type for smbk5pwd
  - New NIS netgroup module for hosts
  - Puppet: autocompletion for classes and variables, allow to enforce list of possible classes
  - fixed bugs:
   -> Autoload errors in tree view
   -> Set correct content type on JSON requests (174)
  - LAM Pro:
   -> Support for LDAP views based on nsview object class
   -> Password notification jobs support to print expiration date in email