@@ -1951,6 +1951,16 @@ abstract class baseModule {
 		return ($this->moduleSettings[$optionName][0] == 'true');
 	}
 
+	/**
+	 * Returns a list of wildcards that can be replaced in input fileds.
+	 * E.g. "$firstname$" is replaced with "givenName" attribute value.
+	 *
+	 * @return array replacements as wildcard => value
+	 */
+	public function getWildCardReplacements() {
+		return array();
+	}
+
 }
 
 /**
