@@ -1,4 +1,5 @@
 December 2016 5.6
+  - New mechanism to replace wildcards in user edit screen. Personal/Unix support more wildcards like "$firstname".
   - Windows: added support for pager, otherPager, mobile, otherMobile, company and proxyAddresses (disabled by default in server profile)
   - Mail routing: enable for groups and allow to add/remove the extension
   - LAM Pro:
